[package]
name = "wasm_ip_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wasm-bindgen = "0.2.92"
rand = "0.9.0-alpha.1"
getrandom = { version = "0.2.15", features = ["js"] }
ipnetwork = "0.20.0"